--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Личный сайт верстальщика</h1>
+            <h1>Личный сайт верстальщика 11</h1>
             <img class="logo" src="img/bug-solid.svg" alt="лого">
             <ul class="main-nav">
                 <li class="nav-item"><a href="#about">Обо мне</a></li>
