--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul class="main-nav">
                 <li class="nav-item"><a href="#about">Обо мне</a></li>
                 <li class="nav-item"><a href="#my-articles">Мои статьи</a></li>
+                <li class="nav-item"><a href="#">еще ссылка</a></li>
             </ul>
         </div>
     </header>
